--- a/css/style.css
+++ b/css/style.css
@@ -1,29 +1,86 @@
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+   CSS reset
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+
+
 /*   {
-    border: 1px solid black; 
+    border: 1px solid green; 
     }*/
 @font-face {
-    font-family:font-awesome;
-    src: url("../fonts/fontawesome-webfont.ttf");
+    font-family: font-awesome;
+    src: url("../fonts/fontawesome-webfont-webfont.ttf");
     }
 
 @font-face {
-    font-family:raleway-light;
-    src: url("../fonts/Raleway-Light.ttf");
+    font-family: raleway-light;
+    src: url("../fonts/raleway-light-webfont.ttf");
+    }
+   
+@font-face {
+    font-family: raleway-medium;
+    src: url("../fonts/raleway-medium-webfont.ttf");
     }
 
 @font-face {
     font-family: playfairdisplay-regular;
-    src: url"..\fonts\PlayfairDisplay-Regular.ttf";
+    src: url("../fonts/playfairdisplay-regular-webfont.ttf");
     }
 
 @font-face {
     font-family: playfairdisplay-bold;
-    src: url"..\fonts\PlayfairDisplay-Bold.ttf";
+    src: url("../fonts/playfairdisplay-bold-webfont.ttf");
     }
 
 @font-face {
     font-family: playfairdisplay-italic;
-    src: url"..\fonts\PlayfairDisplay-Italic.ttf";
+    src: url("../fonts/playfairdisplay-italic-webfont.ttf");
     }
 
 
@@ -61,11 +118,12 @@ section{
     }
 
 #new-collection{
-  font-family:"raleway-light";
+  font-family: "raleway-medium";
 }
 
 #spring-summer{
-  font-size:36px;
+  font-size:50px;
+
 }
 
 
@@ -74,8 +132,9 @@ p{
 }
 
 #header-list li{
+  font-family: "raleway-medium";
   display: inline-block;
-  padding-bottom:10px;
+  padding-bottom:40px;
   margin:0px;
   align-content: center;
 }
@@ -97,9 +156,11 @@ h1{
 h2{
   text-align:center;
   }
-
-.nav-bar{
-  display:block;
+.italic{
+  font-family:"playfairdisplay-italic";
+}
+.bold{
+  font-family:"playfairdisplay-bold";
 }
 
 #aloha-logo{
@@ -127,10 +188,11 @@ h2{
 }
 
 #waves{
-  background-image: url("../images/wave-bkgd.jpg");
+  background-image: linear-gradient(to bottom, rgba(0,0,0,0.25) 0%,rgba(0,0,0,0.25) 100%), url("../images/wave-bkgd.jpg");
   background-position: center bottom;
+  color: white;
   background-size: 100%;
-  height:400px;  
+  height:300px;  
 
   }  
 
@@ -140,7 +202,7 @@ h2{
 
 
 #mens{
-  background-image: url("../images/mens-category.jpg");
+  background-image: linear-gradient(to bottom, rgba(0,0,0,0.25) 0%,rgba(0,0,0,0.25) 100%), url("../images/mens-category.jpg");
   background-size:100%;
   width:600px;
   height:300px;
@@ -151,7 +213,7 @@ h2{
   }
 
 #trends{
-  background-image: url("../images/trends-category.jpg");
+  background-image: linear-gradient(to bottom, rgba(0,0,0,0.25) 0%,rgba(0,0,0,0.25) 100%), url("../images/trends-category.jpg");
   background-size: 100%;
   width:300px;
   height:300px;
@@ -162,7 +224,7 @@ h2{
 }
 
 #glasses{
-  background-image: url("../images/glasses-category.jpg");
+  background-image: linear-gradient(to bottom, rgba(0,0,0,0.25) 0%,rgba(0,0,0,0.25) 100%), url("../images/glasses-category.jpg");
   background-size: 100%;
   width:300px;
   height:300px;
@@ -173,7 +235,7 @@ h2{
   }
 
 #sale{
-  background-image: url("../images/sale-category.jpg");
+  background-image: linear-gradient(to bottom, rgba(0,0,0,0.25) 0%,rgba(0,0,0,0.25) 100%), url("../images/sale-category.jpg");
   background-size: 100%;
   width:300px;
   height:300px;
@@ -184,7 +246,7 @@ h2{
   }
 
 #bags{
-  background-image: url("../images/bags-category.jpg");
+  background-image: linear-gradient(to bottom, rgba(0,0,0,0.25) 0%,rgba(0,0,0,0.25) 100%), url("../images/bags-category.jpg");
   background-size: 100%;
   width:300px;
   height:300px;
@@ -195,11 +257,11 @@ h2{
   }
 
 #womens{
-  background-image: url("../images/womens-category.jpg");
+  background-image: linear-gradient(to bottom, rgba(0,0,0,0.25) 0%,rgba(0,0,0,0.25) 100%), url("../images/womens-category.jpg");
   background-size: 100%;
   width:600px;
   height:300px;
-  margin:0px;
+  margin:0px,3px,0px,0px;
   text-align:center;
   position: relative;
   
