--- a/css/style.css
+++ b/css/style.css
@@ -85,24 +85,112 @@ table {
 
 
 .container{
-  width:1240px;
+  max-width:1240px;
+  min-width:600px;
   text-align: center;
 }
     
-header{
-  display: inline;
-}  
+.nav-bar{
+  background:white;
+  display:flex;
+  z-index:100;
+  flex-flow:row wrap;
+  justify-content:space-around;
+  align-items:center;
+  max-width:1240px;
+  min-width:600px;
+  color:#e2574c;
+  font-family:"raleway-medium";
 
-#header-list{
-  display:inline;
-  left:50%;
-  color:#e2574c
- 
+} 
+.nav-bar a{
+  list-style-type:none;
+  color:inherit;
+  font-family:inherit;
+  text-decoration: none;
+} 
+
+.nav:nth-child(n) {
+position:absolute top left;
 }
-header ul li{
-  padding:30px;
-  color:#e2574c
+
+
+
+.nav:nth-child(6n) {
+  position:absolute top right;
+
 }
+
+
+
+.categories{
+  display:flex;
+  flex-flow:row wrap;
+  max-width:1240px;
+  min-width:600px;
+  color:white;
+  font-family:"raleway-medium";
+  } 
+
+.categories li{
+  list-style-type:none;
+  color:inherit;
+  font-family:inherit;
+  text-decoration: none;
+  display:block;
+  padding-top:125px;
+  padding-bottom:125px;
+  margin:2px;
+  }
+
+.cat a{
+  color:white;
+  text-decoration: none;
+  font-family:"raleway-medium";
+  }
+  
+.cat:nth-child(n) {
+  background-image: linear-gradient(to bottom, rgba(0,0,0,0.25) 0%,rgba(0,0,0,0.25) 100%), 
+  url("../images/mens-category.jpg");
+  background-size:cover;
+  width:calc(99%/2);
+  }
+
+.cat:nth-child(2n) {
+  background-image: linear-gradient(to bottom, rgba(0,0,0,0.25) 0%,rgba(0,0,0,0.25) 100%), 
+  url("../images/trends-category.jpg");
+  background-size:cover;
+  width:calc(99%/4);
+  }
+
+.cat:nth-child(3n) {
+  background-image: linear-gradient(to bottom, rgba(0,0,0,0.25) 0%,rgba(0,0,0,0.25) 100%), 
+  url("../images/glasses-category.jpg");
+  background-size: cover;
+  width:calc(99%/4);
+  }
+
+.cat:nth-child(4n) {
+  background-image: linear-gradient(to bottom, rgba(0,0,0,0.25) 0%,rgba(0,0,0,0.25) 100%), 
+  url("../images/sale-category.jpg");
+  background-size: cover;
+  width:calc(99%/4);
+  }
+
+.cat:nth-child(5n) {
+  background-image: linear-gradient(to bottom, rgba(0,0,0,0.25) 0%,rgba(0,0,0,0.25) 100%), 
+  url("../images/bags-category.jpg");
+  background-size: cover;
+  width:calc(99%/4);
+  }
+
+.cat:nth-child(6n) {
+  background-image: linear-gradient(to bottom, rgba(0,0,0,0.25) 0%,rgba(0,0,0,0.25) 100%), 
+  url("../images/womens-category.jpg");
+  background-size: cover;
+  width:calc(99%/2);
+  }
+
 
 
 section{
@@ -117,14 +205,19 @@ section{
     background-size: auto,contain,cover;
     }
 
-#new-collection{
+h1{
+  text-align:center;
+  position: relative;
+  top: 50%;
+  }
+
+.new-collection{
   font-family: "raleway-medium";
-}
+  }
 
-#spring-summer{
+.spring-summer{
   font-size:50px;
-
-}
+  }
 
 
 p{
@@ -146,29 +239,16 @@ ul{
 }
 
 
-
-h1{
-  text-align:center;
-  position: relative;
-  top: 50%;
-}
-
 h2{
   text-align:center;
   }
+
 .italic{
   font-family:"playfairdisplay-italic";
-}
+  }
+
 .bold{
   font-family:"playfairdisplay-bold";
-}
-
-#aloha-logo{
-  float:left;
-}
-
-#cart{
-  float:right;
   }
 
 .product-list li{
@@ -177,7 +257,6 @@ h2{
   margin:0px;
   width:300px;
 }
-
 
 
 .hero-foot{
@@ -193,79 +272,7 @@ h2{
   color: white;
   background-size: 100%;
   height:300px;  
-
   }  
-
-  #categories li{
-      display: inline-block;
-  }
-
-
-#mens{
-  background-image: linear-gradient(to bottom, rgba(0,0,0,0.25) 0%,rgba(0,0,0,0.25) 100%), url("../images/mens-category.jpg");
-  background-size:100%;
-  width:600px;
-  height:300px;
-  margin:0px,3px,3px,0px;
-  text-align:center;
-  position: relative;
-
-  }
-
-#trends{
-  background-image: linear-gradient(to bottom, rgba(0,0,0,0.25) 0%,rgba(0,0,0,0.25) 100%), url("../images/trends-category.jpg");
-  background-size: 100%;
-  width:300px;
-  height:300px;
-  margin:0px,3px,3px,0px;
-  text-align:center;
-  position: relative;
-
-}
-
-#glasses{
-  background-image: linear-gradient(to bottom, rgba(0,0,0,0.25) 0%,rgba(0,0,0,0.25) 100%), url("../images/glasses-category.jpg");
-  background-size: 100%;
-  width:300px;
-  height:300px;
-  margin:0px,3px,3px,0px;
-  text-align:center;
-  position: relative;
- 
-  }
-
-#sale{
-  background-image: linear-gradient(to bottom, rgba(0,0,0,0.25) 0%,rgba(0,0,0,0.25) 100%), url("../images/sale-category.jpg");
-  background-size: 100%;
-  width:300px;
-  height:300px;
-  margin:0px,3px,0px,0px;
-  text-align:center;
-  position: relative;
-  
-  }
-
-#bags{
-  background-image: linear-gradient(to bottom, rgba(0,0,0,0.25) 0%,rgba(0,0,0,0.25) 100%), url("../images/bags-category.jpg");
-  background-size: 100%;
-  width:300px;
-  height:300px;
-  margin:0px,3px,0px,0px;
-  text-align:center;
-  position: relative;
-
-  }
-
-#womens{
-  background-image: linear-gradient(to bottom, rgba(0,0,0,0.25) 0%,rgba(0,0,0,0.25) 100%), url("../images/womens-category.jpg");
-  background-size: 100%;
-  width:600px;
-  height:300px;
-  margin:0px,3px,0px,0px;
-  text-align:center;
-  position: relative;
-  
-  }
 
 footer{
   color:white;
