--- a/css/style.css
+++ b/css/style.css
@@ -137,9 +137,9 @@ table {
 
 /*--------------Selectors Used Throughout---------------*/
 
-body{
+html{
   min-width:480px;
-  font-size:14px;
+  font-size:16px;
   }
 
 h1{
@@ -151,8 +151,10 @@ h1{
 
 p{
   font-family: "Raleway";
-  padding-bottom:3rem;
+  width:25rem;
   text-align: center;
+  margin:0 auto;
+  padding-bottom:3rem;
   }
 
 ul{
@@ -165,8 +167,7 @@ h2{
   text-align:center;
   }
   
-  a:hover{
-    color:#b64036}
+  
 
 .italic{
   font-family:"Playfair Display";
@@ -183,17 +184,35 @@ h2{
  
  /*----------------navigation and logos-------------------*/
 
+.nav {
+  margin:1rem auto;
+  display:inline;
+    }
+.nav a:hover{
+    color:#b64036;
+    }
+.nav ul li{
+  display:inline;
+  padding:.5rem;
 
+}
+.nav ul{
+    border-top:.1rem solid #d7d7d7;
+
+  display:flex;
+    justify-content: space-between;
+}
+  
 .nav-bar{
-  align-items:center;
   background:white;
   display:flex;
-  flex-flow:row wrap;
+  flex-wrap:wrap; 
   font-family:"Raleway"; 
   font-weight:bold;
-  justify-content:space-around;
-  
+    justify-content: space-between;
+
   z-index:100;
+
   } 
 
 .nav-bar a{
@@ -203,35 +222,35 @@ h2{
   }
  
   .nav{
+    justify-content: space-between;
+
+    width:90%;
     order:3;
-    padding:1rem;
   }
 
   #logo{
     order:1;
+    padding-top:2rem;
+    padding-left:2rem;
   }
   #cart{
     order:2;
+    padding-top:2rem;
+    padding-right:2rem;
   }
 
 #logo img{
-  max-width: 15rem; 
-    align-self:flex-start;
- 
+  max-width: 10rem;
 }
 
 #cart img{
   max-width:3rem;
-    align-self:flex-end;
-
+  
   }
 
 
 
-.nav li{
-  display:inline;
-  justify-content: space-around;
-    }
+
 
 
 /* -----------------Hero Banner--------------- */
@@ -260,8 +279,11 @@ h1{
 
 .new-collection{
   font-family: "Raleway";
+  font-size: 1.25rem;
   font-weight:bold;
   align-content: center;
+  padding-bottom:1rem
+
   }
 
 .spring-summer{
@@ -364,11 +386,41 @@ h1{
 /*--------------------Featured List-------------------*/
 
 
-.featured li{
-  display: inline-block;
-  padding:0px;
-  margin:0px;
-  width:24%;
+.main-carousel{
+  padding-bottom:5rem;
+  margin:0 auto;
+  max-width:350px;
+  width:90%;
+  height:auto;
+  initialIndex: 2;
+  }
+
+.main-carousel li{
+    text-align: center;
+    text-decoration: none;
+  }
+
+.main-carousel li a{
+  text-decoration: none;
+  }
+
+.grey-text{
+  color:#969696;
+  font-family: Raleway;
+  font-weight: bold;
+  }
+
+.product-name{
+  color:#e2574c;
+  font-family: Playfair Display;
+  font-size:1.25rem;
+  padding:1rem;
+  }
+
+.price{
+  color:#969696;
+  font-family: Raleway;
+  font-weight: bold;
   }
 
 
@@ -382,20 +434,29 @@ h1{
   color: white;
   display:flex;
   flex-flow:column nowrap;
-  height:250px;  
-  border-top:.5rem solid white;
-  border-bottom:.5rem solid white;
+  height:20rem;  
   }  
-
-.waves h2{
-  }
 
 .waves p{
   text-align:center;
   }
 
-.waves button{
+  .signup {
+    width: 386px;
+    height: 46px;
+    bottom: 2.5rem;
+  }
 
+  .subscribe {
+    padding: 1rem;
+    right: 6rem;
+  } 
+
+  .userinput {
+    left: 16rem;
+    bottom: 0.2rem;
+    height: 2.5rem;
+    width: 120px;
   }
 
 /*-------------Footer with Social Media-----------*/
@@ -425,12 +486,11 @@ h1{
 .foot ul{
   align-content: center;
   justify-content: space-around;
-  width:50%;
   }
 
 .social-text{
   font-size:0rem;
-}
+  }
 
 .social-media{
   margin:0 auto;
@@ -444,25 +504,30 @@ h1{
 .social-media li a{
   color:white;
   text-decoration:none;
-}
+  }
 
 /*-------------------Tablet Styling-----------------*/
 
 
 @media (min-width: 600px){
-   body{
-  font-size:16px;
-  }
+   
+p{
+  width:30rem;
+}
 
 .nav-bar{
-  align-items:center;
+  display:flex;
+  flex-flow: row nowrap;
   background:white;
   } 
 
 .nav-bar ul li{
   padding:.5rem
 }
- 
+ .nav ul{
+   border:none;
+   padding-top:1.5rem;
+   }
   .nav{
     flex-flow: row nowrap;
     order:2;
@@ -472,6 +537,7 @@ h1{
     order:1;
   }
   #cart{
+    padding-left:2rem;
     order:3;
   }
 
@@ -545,31 +611,44 @@ section{
   
   flex: 2 0 100%;
   max-width: 48%;
-
-
 }
+
+  .main-carousel {
+    max-width:700px;
+  }
+
+
+
 
 .foot{
   background-color:#242424;
   color:white;
-  flex-flow:row nowrap;
+  display:flex;
+  flex-flow:column wrap;
   padding-bottom:50px; 
   padding-top:50px;
   }
   
   .foot p{
     max-width:40%;
-    text-align:left;
+    
   }
-
+.info{
+text-align:left;
+}
+.info-pad{
+  text-align:left; 
+  padding-left:0;
+}
 .info-grey{
   color:#969696;
   text-align:left;
   }
 
 .foot ul{
-  text-align: right;
-  max-width: 40%;  }
+  align-items: right;
+  text-align: left;
+  max-width: 50%;  }
 
 .social-text{
   font-size:1rem;
@@ -577,8 +656,7 @@ section{
 
 .social-media{
   color:white;
-  float:right;
-  padding-right:30px;
+  right:90%;
   }
 
 .social-media li{
@@ -590,12 +668,19 @@ section{
   /*-------------------Wide PC Styling---------------*/
 
 @media screen and (min-width:1240px) {
-  html{
+  body{
   font-size:16px;
   }
-
+p{
+  width:35rem;
+}
 section{
   height:30rem;
 }
 
-}
+.main-carousel{
+    max-width:1240px;
+  }
+
+
+}}
