--- a/css/style.css
+++ b/css/style.css
@@ -197,10 +197,9 @@ h2{
 
 }
 .nav ul{
-    border-top:.1rem solid #d7d7d7;
-
+  border-top:.1rem solid #d7d7d7;
   display:flex;
-    justify-content: space-between;
+  justify-content: space-between;
 }
   
 .nav-bar{
@@ -209,8 +208,7 @@ h2{
   flex-wrap:wrap; 
   font-family:"Raleway"; 
   font-weight:bold;
-    justify-content: space-between;
-
+  justify-content: space-between;
   z-index:100;
 
   } 
@@ -296,7 +294,7 @@ h1{
 /*----------------Shop Grid----------------*/
 
 
-.shop{
+#shop{
   color:white;
   display:flex;
   flex-flow:row wrap;
@@ -306,7 +304,7 @@ h1{
   text-align: center
   } 
 
-.shop li{
+#shop li{
   border:.2rem solid white;
   color:inherit;
   display: inline;
@@ -340,10 +338,10 @@ h1{
 .cat:nth-child(2n) {
   background-image: linear-gradient(to bottom, rgba(0,0,0,0.25) 0%,rgba(0,0,0,0.25) 100%), 
     url("../images/trends-category.jpg");
-    background-position:right;
+  background-position:right;
   background-size:cover;
-    flex: 1 0 48%;
-      max-width:48%;
+  flex: 1 0 48%;
+  max-width:48%;
 }
 
 .cat:nth-child(3n) {
@@ -351,8 +349,8 @@ h1{
     url("../images/glasses-category.jpg");
   background-position:right;
   background-size: cover;
-    flex: 1 0 48%;
-      max-width:48%;
+  flex: 1 0 48%;
+  max-width:48%;
 }
 
 .cat:nth-child(4n) {
@@ -360,8 +358,8 @@ h1{
     url("../images/sale-category.jpg");
   background-position:right;
   background-size: cover;
-     flex: 1 0 48%;
-    max-width:48%;
+  flex: 1 0 48%;
+  max-width:48%;
 
   }
 
@@ -370,8 +368,8 @@ h1{
     url("../images/bags-category.jpg");
   background-position:right;
   background-size: cover;
-    flex: 1 0 48%;
-    max-width:48%;
+  flex: 1 0 48%;
+  max-width:48%;
   }
 
 .cat:nth-child(6n) {
@@ -425,11 +423,14 @@ h1{
   font-weight: bold;
   }
 
+.flickity-prev-next-button {
+display:none;
+}
 
 /*------------------Updates area with wave background and Form--------------*/
 
 
-.updates{
+#updates{
   background-image: linear-gradient(to bottom, rgba(0,0,0,0.25) 0%,rgba(0,0,0,0.25) 100%), url("../images/wave-bkgd.jpg");
   background-position: center bottom;
   background-size: cover;
@@ -441,40 +442,49 @@ h1{
   }  
 
 
-  .signup {
+  #signup {
+    background: white;
     width: 386px;
-    height: 46px;
+    height: 3.4rem;
     bottom: 2.5rem;
     margin:0 auto;
+    border-radius:2rem;
+
   }
 
-  .subscribe {
-	background-color:#e2574c;
+  .submit {
+	
+  background-color:#e2574c;
 	border-radius:2rem;
-	border:4px solid white;
+  border-style: none;
+  box-shadow: none;
 	display:inline-block;
 	cursor:pointer;
 	color:#ffffff;
 	font-family:Arial;
 	font-size:1rem;
-	padding:.75rem 1.5rem;
+	height:2.8rem;
+  padding:0 1.5rem;
 	text-decoration:none;
+  top:.3rem;
+  margin:.3rem .2rem;
 }
 .myButton:hover {
+  
 	background-color:#e2574c;
 }
 .myButton:active {
 	position:relative;
-	top:1px;
+
 }
 
-    
-
-  .userinput {
+    #email {
     border-radius:2rem;
-    bottom: 0.2rem;
-    height: 2.75rem;
-    width: 10rem;
+    border-style: none;
+    box-shadow: none;
+    padding-left:.2rem;
+    width: 15.6rem;
+    height:2.8rem;
   }
 
 /*-------------Footer with Social Media-----------*/
@@ -591,7 +601,7 @@ section{
   padding-bottom:125px;
   text-decoration: none;
   text-align:center;
-  margin:0, auto;
+  margin:0 auto;
   }
 
 .cat:nth-child(n) {
@@ -642,34 +652,39 @@ section{
   background-color:#242424;
   color:white;
   display:flex;
-  flex-flow:row wrap;
-  padding-bottom:50px; 
-  padding-top:50px;
+  flex-flow:column wrap;
+  max-height: 20rem;
   }
   
-  .foot p{
-    display:column wrap;
-    align-items:left;
-    max-width:40%;
-    
+.foot p{
+  display:column wrap;
+  align-items:left;
+  max-width:40%;
   }
+
 .info{
 text-align:left;
+  max-width:40%;
+  padding-bottom:.5rem;
+
 }
+
 .info-pad{
   text-align:left; 
-  padding-left:0;
+  max-width:40%;
 }
+
 .info-grey{
   color:#969696;
   text-align:left;
+  max-width:40%;
+  padding-bottom:.5rem;
   }
 
 .foot ul{
-  align-items: right;
   text-align: left;
-  max-width: 40%; 
-  align-content: right;
+  max-width: 20%; 
+  padding-left: 20rem;
   justify-content: none;
  }
 
@@ -679,7 +694,7 @@ text-align:left;
 
 .social-media{
   color:white;
-  right:90%;
+  margin:0;
   }
 
 .social-media li{
@@ -705,6 +720,4 @@ section{
     max-width:80rem;
     min-width:80rem;
   }
-
-
-}}
+}
