--- a/css/style.css
+++ b/css/style.css
@@ -142,6 +142,10 @@ html{
   font-size:16px;
   }
 
+body{
+  color: #2d2d2d;
+  }
+
 h1{
   
   text-align:center;
@@ -597,49 +601,43 @@ section{
   display:inline-block;
   font-family:inherit;
   list-style-type:none;
+  margin:0 auto;
   padding-top:125px;
   padding-bottom:125px;
   text-decoration: none;
   text-align:center;
-  margin:0 auto;
+  
   }
 
 .cat:nth-child(n) {
-
   flex: 2 0 100%;
   max-width: 49%;
   }
 
 .cat:nth-child(2n) {
- 
-    flex: 1 0 49%;
-      max-width:24%;
-}
+  flex: 1 0 49%;
+  max-width:24%;
+  }
 
 .cat:nth-child(3n) {
-  
-    flex: 1 0 50%;
-      max-width:24%;
-}
+  flex: 1 0 50%;
+  max-width:24%;
+  }
 
 .cat:nth-child(4n) {
- 
-     flex: 1 0 49%;
-    max-width:24%;
-
+  flex: 1 0 49%;
+  max-width:24%;
   }
 
 .cat:nth-child(5n) {
- 
-    flex: 1 0 50%;
-    max-width:24%;
+  flex: 1 0 50%;
+  max-width:24%;
   }
 
 .cat:nth-child(6n) {
-  
   flex: 2 0 100%;
   max-width: 49%;
-}
+  }
 
   
   
