--- a/css/style.css
+++ b/css/style.css
@@ -191,10 +191,10 @@ h2{
 .nav {
   margin:1rem auto;
   display:inline;
-    }
+  }
 .nav a:hover{
-    color:#b64036;
-    }
+  color:#b64036;
+  }
 .nav ul li{
   display:inline;
   padding:.5rem;
@@ -214,41 +214,39 @@ h2{
   font-weight:bold;
   justify-content: space-between;
   z-index:100;
-
-  } 
+} 
 
 .nav-bar a{
   color:#e2574c;
   list-style-type:none;
   text-decoration:none;
-  }
+}
  
-  .nav{
-    justify-content: space-between;
-    max-width:40rem;
-    width:90%;
-    order:3;
-  }
+.nav{
+  justify-content: space-between;
+  max-width:40rem;
+  width:90%;
+  order:3;
+}
 
-  #logo{
-    order:1;
-    padding-top:2rem;
-    padding-left:2rem;
-  }
-  #cart{
-    order:2;
-    padding-top:2rem;
-    padding-right:2rem;
-  }
+#logo{
+  order:1;
+  padding-top:2rem;
+  padding-left:2rem;
+}
+#cart{
+  order:2;
+  padding-top:2rem;
+  padding-right:2rem;
+}
 
 #logo img{
   max-width: 10rem;
 }
 
 #cart img{
-  max-width:3rem;
-  
-  }
+  max-width:3rem; 
+}
 
 
 
@@ -270,6 +268,7 @@ section{
   display:flex;
   height:25rem;  
   }
+
 h1{
   align-content: center;
   margin:auto auto;
@@ -306,7 +305,7 @@ h1{
   font-size:2rem;
   font-weight:bold;
   text-align: center
-  } 
+} 
 
 #shop li{
   border:.2rem solid white;
@@ -319,16 +318,15 @@ h1{
   padding-bottom:100px;
   text-decoration: none;
   text-align:center;
-  text-transform:uppercase;
-  
-  }
+  text-transform:uppercase; 
+}
 
 .cat a{
   color:white;
   font-family:"Raleway";
   text-decoration: none;
   align-content: center;
-  }
+}
   
 .cat:nth-child(n) {
   background-image: linear-gradient(to bottom, rgba(0,0,0,0.25) 0%,rgba(0,0,0,0.25) 100%), 
@@ -337,7 +335,7 @@ h1{
   background-size:cover;
   flex: 2 0 100%;
   max-width: 100%;
-  }
+}
 
 .cat:nth-child(2n) {
   background-image: linear-gradient(to bottom, rgba(0,0,0,0.25) 0%,rgba(0,0,0,0.25) 100%), 
@@ -364,8 +362,7 @@ h1{
   background-size: cover;
   flex: 1 0 48%;
   max-width:48%;
-
-  }
+}
 
 .cat:nth-child(5n) {
   background-image: linear-gradient(to bottom, rgba(0,0,0,0.25) 0%,rgba(0,0,0,0.25) 100%), 
@@ -374,7 +371,7 @@ h1{
   background-size: cover;
   flex: 1 0 48%;
   max-width:48%;
-  }
+}
 
 .cat:nth-child(6n) {
   background-image: linear-gradient(to bottom, rgba(0,0,0,0.25) 0%,rgba(0,0,0,0.25) 100%), 
@@ -383,8 +380,7 @@ h1{
   background-size: cover;
   flex: 2 0 100%;
   max-width: 100%;
-
-  }
+}
 
 
 /*--------------------Featured List-------------------*/
@@ -396,39 +392,39 @@ h1{
   min-width:20rem;
   width:90%;
   height:auto;
-  }
+}
 
 .main-carousel li{
-    text-align: center;
-    text-decoration: none;
-  }
+  text-align: center;
+  text-decoration: none;
+}
 
 .main-carousel li a{
   text-decoration: none;
-  }
+}
 
 .grey-text{
   color:#969696;
   font-family: Raleway;
   font-weight: normal;
   text-transform: uppercase;
-  }
+}
 
 .product-name{
   color:#e2574c;
   font-family: Playfair Display;
   font-size:1.25rem;
   padding:1rem;
-  }
+}
 
 .price{
   color:#969696;
   font-family: Raleway;
   font-weight: bold;
-  }
+}
 
 .flickity-prev-next-button {
-display:none;
+  display:none;
 }
 
 /*------------------Updates area with wave background and Form--------------*/
@@ -443,7 +439,7 @@ display:none;
   flex-flow:column nowrap;
   height:20rem;  
   margin-top: 3rem;
-  }  
+}  
 
 
   #signup {
@@ -453,11 +449,9 @@ display:none;
     bottom: 2.5rem;
     margin:0 auto;
     border-radius:2rem;
-
   }
 
   .submit {
-	
   background-color:#e2574c;
 	border-radius:2rem;
   border-style: none;
@@ -473,23 +467,23 @@ display:none;
   top:.3rem;
   margin:.3rem .2rem;
 }
-.myButton:hover {
-  
+
+.myButton:hover { 
 	background-color:#e2574c;
 }
+
 .myButton:active {
 	position:relative;
-
 }
 
-    #email {
-    border-radius:2rem;
-    border-style: none;
-    box-shadow: none;
-    padding-left:.2rem;
-    width: 15.6rem;
-    height:2.8rem;
-  }
+#email {
+  border-radius:2rem;
+  border-style: none;
+  box-shadow: none;
+  padding-left:.2rem;
+  width: 15.6rem;
+  height:2.8rem;
+}
 
 /*-------------Footer with Social Media-----------*/
 
@@ -501,42 +495,45 @@ display:none;
   flex-flow:column nowrap; 
   padding-bottom:3rem; 
   padding-top:3rem;
-  }
+}
 
 .info{
   text-align:center;
-  }
+}
 
 .info-pad{
   padding:1rem;
   text-align:center;
 }
+
 .info-grey{
   color:#969696;
   text-align:center;
-  }
+}
+
 .foot ul{
   align-content: center;
   justify-content: space-around;
-  }
+}
 
 .social-text{
   font-size:0rem;
-  }
+}
 
 .social-media{
   margin:0 auto;
   display:inline;
-  }
+}
 
 .social-media li{
   display:inline-block;
   padding:.5rem;
-  }
+}
+
 .social-media li a{
   color:white;
   text-decoration:none;
-  }
+}
 
 /*-------------------Tablet Styling-----------------*/
 
@@ -551,27 +548,29 @@ p{
   display:flex;
   flex-flow: row nowrap;
   background:white;
-  } 
+} 
 
 .nav-bar ul li{
   padding:.5rem
 }
- .nav ul{
-   border:none;
-   padding-top:1.5rem;
-   }
-  .nav{
-    flex-flow: row nowrap;
-    order:2;
+ 
+.nav ul{
+  border:none;
+  padding-top:1.5rem;
+}
+.nav{
+  flex-flow: row nowrap;
+  order:2;
+}
+
+#logo{
+  order:1;
   }
 
-  #logo{
-    order:1;
-  }
-  #cart{
-    padding-left:2rem;
-    order:3;
-  }
+#cart{
+  padding-left:2rem;
+  order:3;
+}
 
 section{
   background-position-y: 0, 5rem, 0;
@@ -593,7 +592,7 @@ section{
   font-size:2rem;
   font-weight:bold;
   text-align: center
-  } 
+} 
 
 .shop li{
   border:.2rem solid white;
@@ -606,68 +605,66 @@ section{
   padding-bottom:125px;
   text-decoration: none;
   text-align:center;
-  
-  }
+}
 
 .cat:nth-child(n) {
   flex: 2 0 100%;
   max-width: 49%;
-  }
+}
 
 .cat:nth-child(2n) {
   flex: 1 0 49%;
   max-width:24%;
-  }
+}
 
 .cat:nth-child(3n) {
   flex: 1 0 50%;
   max-width:24%;
-  }
+}
 
 .cat:nth-child(4n) {
   flex: 1 0 49%;
   max-width:24%;
-  }
+}
 
 .cat:nth-child(5n) {
   flex: 1 0 50%;
   max-width:24%;
-  }
+}
 
 .cat:nth-child(6n) {
   flex: 2 0 100%;
   max-width: 49%;
-  }
+}
 
-  
-  
 .main-carousel {
-    max-width:40rem;
-    min-width:40rem;
-  }
+  max-width:40rem;
+  min-width:40rem;
+}
 
 .foot{
   background-color:#242424;
   color:white;
   display:flex;
-  flex-flow:column wrap;
+  flex-flow:row nowrap;
+  justify-content: space-between;
   max-height: 20rem;
-  }
+}
   
 .foot p{
   display:column wrap;
   align-items:left;
   max-width:40%;
-  }
+}
 
 .info{
-text-align:left;
-  max-width:40%;
+  text-align:left;
   padding-bottom:.5rem;
-
+  padding-left:1rem;
 }
 
 .info-pad{
+  padding-left:2rem;
   text-align:left; 
   max-width:40%;
 }
@@ -675,8 +672,9 @@ text-align:left;
 .info-grey{
   color:#969696;
   text-align:left;
-  max-width:40%;
   padding-bottom:.5rem;
+  padding-left:1rem;
+
   }
 
 .foot ul{
@@ -688,12 +686,13 @@ text-align:left;
 
 .social-text{
   font-size:1rem;
-  }
+}
 
 .social-media{
   color:white;
   margin:0;
-  }
+  padding-right:1rem
+}
 
 .social-media li{
   display:block;
@@ -704,18 +703,21 @@ text-align:left;
   /*-------------------Wide PC Styling---------------*/
 
 @media screen and (min-width:1240px) {
-  body{
+  
+body{
   font-size:16px;
-  }
+}
+
 p{
   width:35rem;
 }
+
 section{
   height:30rem;
 }
 
 .main-carousel{
-    max-width:80rem;
-    min-width:80rem;
+  max-width:80rem;
+  min-width:80rem;
   }
 }
